# tf-pwa-op

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml
tf_pwa_op/: __init__.py
tf_pwa_op/cc/: CMakeLists.txt
tf_pwa_op/cc/kernels/: Delta_D_kernels.cc  Delta_D_kernels.cu  blatt_weisskopf_barrier_factor_kernels.cc  blatt_weisskopf_barrier_factor_kernels.cu  monment_lambda_kernels.cc  monment_lambda_kernels.cu  small_d.h  small_d_kernels.cc  small_d_kernels.cu
tf_pwa_op/cc/ops/: small_d_ops.cc
tf_pwa_op/python/ops/: small_d_ops.py
