[project]
name = "tf_pwa_op"
version = "0.0.1"
dependencies = [
  "tensorflow >= 2.10.0",
]
authors = [
    {name = "Yi Jiang", email = "jiangyi15@mails.ucas.ac.cn"},
]
description = "tensorflow ops for TFPWA"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
]
keywords = ["tensorflow", "custom op", "partial wave analysis"]
license = {text = "Apache-2.0"}

[build-system] # How pip and other frontends should build this project
requires = ["py-build-cmake~=0.4.2", "tensorflow"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.sdist] # What to include in source distributions
include = ["CMakeLists.txt", "tf_pwa_op/python/ops/*.so"]

[tool.py-build-cmake.cmake] # How to build the CMake project
build_type = "RelWithDebInfo"
source_path = "."
build_args = ["-j"]
